--- a/angular.json
+++ b/angular.json
@@ -30,9 +30,11 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/font-awesome/css/font-awesome.css",
+              "node_modules/@fortawesome/fontawesome-free/css/all.css"
             ],
-            "scripts": [],
+            "scripts": ["node_modules/@fortawesome/fontawesome-free/js/all.js"],
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
